...
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_app_rotate" />

                <ImageView
                    android:id="@+id/icPdfTools"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:contentDescription="@string/pdf_tools"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_pdf_tools" />

                <ImageView
                    android:id="@+id/icAppEdit"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_app_magic_wand" />

                <ImageView
...
        app:layout_constraintBottom_toTopOf="@+id/rcvFrameData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnHeader">

        <com.reader.pdfviewer.PDFView
            android:id="@+id/pdfRead"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background_secondary"

            android:layout_marginTop="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
...
            app:uiBackgroundColor="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/lnInkToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="@dimen/_8sdp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icInkClose"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:contentDescription="@string/done"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_ink_close" />

...
                    android:layout_marginStart="@dimen/_8sdp"
                    android:contentDescription="@string/redo"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_ink_redo" />

                <ImageView
                    android:id="@+id/icInkSave"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:contentDescription="@string/save"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_ink_save" />
...
