...
            android:singleLine="true"
            android:text="@string/pdf_organize"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/rb_400"
            android:padding="@dimen/_6sdp"
            android:text="@string/save"
...
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/pdf_organize_hint"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/_10sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background_secondary"
        android:clipToPadding="false"
        android:padding="@dimen/_6sdp" />
...
