<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Android Office</string>

    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="toolbar_note">toolbar note</string>

</resources>
